# rust-novelai

./: .gitignore  Cargo.toml  LICENSE
src/: api.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: ai.rs  user.rs
src/api/user/: subscription.rs
